# python_selenium_test

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py  tox.ini
tests/: conftest.py  first_test.py  test_first.py
