[metadata]
name = Puthon Selenium Test
version= 0.1.0
url = https://github.com/plus3x/python_selenium_test
project_urls =
    Documentation = https://github.com/plus3x/python_selenium_test
    Code = https://github.com/plus3x/python_selenium_test
    Issue tracker = https://github.com/plus3x/python_selenium_test/issues
license = MIT
maintainer = Vladislav Petrov
description =
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
